fixed taskbar selection and it overlapping windows

--- a/window-manager/public/css/main.css
+++ b/window-manager/public/css/main.css
@@ -57,6 +57,7 @@ span:nth-child(4) {
 /* Task Bar */
 
 #taskbar {
+-webkit-user-select: none;
 z-index: 500;
 position: fixed;
 bottom: 0px;
@@ -68,6 +69,7 @@ opacity: 1;
 transition: .3s opacity;
 box-shadow: 0px 3px 5px #000;
 border-top: 3px solid #FFF;
+box-sizing: border-box;
 }
 #taskbar *{
   -webkit-user-select: none;
